--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-fileupload": "^1.1.5",
     "express-session": "^1.16.2",
     "mongoose": "^5.6.11",
     "validator": "^11.1.0"
