--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^2.2.0",
     "dotenv": "^8.1.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-fileupload": "^1.1.5",
-    "express-session": "^1.16.2",
+    "express-session": "^1.16.1",
     "mongoose": "^5.6.11",
     "validator": "^11.1.0"
   }
