--- a/.env
+++ b/.env
@@ -2,4 +2,15 @@ PORT = 4000
 
 DB_USER = akib_hridoy
 DB_PASSWORD = OIKW3ozDi6pCTbIK
+
 SESSION_SECRET = our first complete website
+
+MAIL_HOST = smtp.mailtrap.io
+MAIL_PORT = 465
+MAIL_USERNAME = 6463cd9218916b
+MAIL_PASSWORD = 53a5194bfb901b
+
+SITE_NAME = PROJECT_NAME
+SITE_EMAIL = admin@project_name.com
+
+SITE_URL = http://localhost:4000
