--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "express-fileupload": "^1.1.5",
     "express-session": "^1.16.1",
     "mongoose": "^5.6.11",
+    "nodemailer": "^6.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "validator": "^11.1.0"
   }
 }
