login with google oAuth done

--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ SITE_NAME = PROJECT_NAME
 SITE_EMAIL = admin@project_name.com
 
 SITE_URL = http://localhost:5000
+
+GOOGLE_CLIENT_ID = 959515215865-sbo50eqhdrcujvdglmrhmcpiekkcfj2s.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = rKkF4AncThZCZJ424Nv-GvHL
+GOOGLE_CALLBCK = http://localhost:5000/oauth/google/callback
