--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose": "^5.6.11",
     "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "validator": "^11.1.0"
   }
