spell mistake fixed in .env

--- a/.env
+++ b/.env
@@ -17,4 +17,4 @@ SITE_URL = http://localhost:5000
 
 GOOGLE_CLIENT_ID = 959515215865-sbo50eqhdrcujvdglmrhmcpiekkcfj2s.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = rKkF4AncThZCZJ424Nv-GvHL
-GOOGLE_CALLBCK = http://localhost:5000/oauth/google/callback
+GOOGLE_CALLBACK = http://localhost:5000/oauth/google/callback
