--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
     "autoprefixer": "^9.7.0",
+    "babel-loader": "^8.0.6",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.3.0",
@@ -44,6 +48,8 @@
     "nodemon": "^1.19.2",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "sass-loader": "^8.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
