friend list rest api and frontend show done

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT = 5000
 DB_USER = akib_hridoy
 DB_PASSWORD = OIKW3ozDi6pCTbIK
 
-SESSION_SECRET = our first complete website
+SECRET_CODE = our first complete website
 
 MAIL_HOST = smtp.mailtrap.io
 MAIL_PORT = 465
