--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "autoprefixer": "^9.7.0",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
@@ -50,6 +51,9 @@
     "prettier": "^1.18.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
@@ -65,12 +69,14 @@
     "express-ejs-layouts": "^2.5.0",
     "express-fileupload": "^1.1.5",
     "express-session": "^1.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
     "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0",
     "validator": "^11.1.0"
   },
   "engines": {
