--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.0",
+    "socket.io-client": "^2.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
   },
