--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
     "mini-css-extract-plugin": "^0.8.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.2",
     "postcss-loader": "^3.0.0",
@@ -52,6 +53,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-scroll": "^1.7.14",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
