sendgrid setup complite

--- a/.env
+++ b/.env
@@ -3,15 +3,12 @@ PORT = 5000
 DB_USER = akib_hridoy
 DB_PASSWORD = OIKW3ozDi6pCTbIK
 
-SECRET_CODE = our first complete website
+SECRET_CODE = my secret code
 
-MAIL_HOST = smtp.mailtrap.io
-MAIL_PORT = 465
-MAIL_USERNAME = 6463cd9218916b
-MAIL_PASSWORD = 53a5194bfb901b 
+MAIL_API_KEY = sendgrid mail api key
 
-SITE_NAME = PROJECT_NAME
-SITE_EMAIL = admin@project_name.com
+SITE_NAME = Adda Golpo
+SITE_EMAIL = multi.hridoy@gmail.com
 
 SITE_URL = http://localhost:5000
 
