changed database username and password

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 5000
 
-DB_USER = akib_hridoy
-DB_PASSWORD = OIKW3ozDi6pCTbIK
+DB_USER = your mongodb database user name
+DB_PASSWORD = mongodb database user password
 
 SECRET_CODE = my secret code
 
