--- a/.env
+++ b/.env
@@ -12,12 +12,12 @@ SITE_EMAIL = multi.hridoy@gmail.com
 
 SITE_URL = http://localhost:5000
 
-GOOGLE_CLIENT_ID = 959515215865-sbo50eqhdrcujvdglmrhmcpiekkcfj2s.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = rKkF4AncThZCZJ424Nv-GvHL
+GOOGLE_CLIENT_ID = your google api client id
+GOOGLE_CLIENT_SECRET = your google api client secret code
 GOOGLE_CALLBACK = http://localhost:5000/oauth/google/callback
 
-FACEBOOK_APP_ID = 407904330078782
-FACEBOOK_CLIENT_SECRET = 96ab7285072397cac18c84fa716f8d67
+FACEBOOK_APP_ID = your facebook api client id
+FACEBOOK_CLIENT_SECRET = your facebook api client secret code
 FACEBOOK_CALLBACK = http://localhost:5000/oauth/facebook/callback
 
 CLOUDINARY_CLOUD_NAME = dd1yyqwwy
