changed cloudinary api key and secret code

--- a/.env
+++ b/.env
@@ -20,6 +20,6 @@ FACEBOOK_APP_ID = your facebook api client id
 FACEBOOK_CLIENT_SECRET = your facebook api client secret code
 FACEBOOK_CALLBACK = http://localhost:5000/oauth/facebook/callback
 
-CLOUDINARY_CLOUD_NAME = dd1yyqwwy
-CLOUDINARY_API_KEY = 487224136337923
-CLOUDINARY_API_SECRET = g7CCzsbblhqOvPTwdaGlgDadEH8
+CLOUDINARY_CLOUD_NAME = your cloudinay cloud name
+CLOUDINARY_API_KEY = you cloudiray api key
+CLOUDINARY_API_SECRET = your cloudiray api secret 
